# ChangeLog for games-strategy/hedgewars
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/hedgewars/ChangeLog,v 1.53 2013/06/03 16:37:38 mr_bones_ Exp $

  03 Jun 2013; Michael Sterrett <mr_bones_@gentoo.org>
  hedgewars-0.9.19-r1.ebuild:
  update DESCRIPTION to match upstream's

*hedgewars-0.9.19-r1 (31 May 2013)

  31 May 2013; Julian Ospald <hasufell@gentoo.org> -hedgewars-0.9.19.ebuild,
  +hedgewars-0.9.19-r1.ebuild,
  +files/hedgewars-0.9.19-de_translation_fix.patch,
  +files/hedgewars-0.9.19-missionmap.patch:
  revbump, fix missionmaps and de translation

*hedgewars-0.9.19 (31 May 2013)

  31 May 2013; Julian Ospald <hasufell@gentoo.org> +hedgewars-0.9.19.ebuild:
  version bump

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> hedgewars-0.9.18-r1.ebuild:
  Move Qt dependencies to the new category

  22 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org> -hedgewars-0.9.17.ebuild:
  old

  13 Jan 2013; Agostino Sarubbo <ago@gentoo.org> hedgewars-0.9.18-r1.ebuild:
  Stable for x86, wrt bug #449904

  03 Jan 2013; Agostino Sarubbo <ago@gentoo.org> hedgewars-0.9.18-r1.ebuild:
  Stable for amd64, wrt bug #449904

  05 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
  hedgewars-0.9.18-r1.ebuild:
  add glut dep (bug #441870)

  04 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
  hedgewars-0.9.18-r1.ebuild:
  don't try to find ghc automagically (bug #441686)

*hedgewars-0.9.18-r1 (03 Nov 2012)

  03 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
  +hedgewars-0.9.18-r1.ebuild, -hedgewars-0.9.18.ebuild:
  rev bump to get updated upstream tarball

  02 Nov 2012; Julian Ospald <hasufell@gentoo.org>
  files/hedgewars-0.9.18-cmake.patch:
  newline messup, fixes bug 440974

  01 Nov 2012; Michael Sterrett <mr_bones_@gentoo.org>
  +files/hedgewars-0.9.18-cmake.patch, hedgewars-0.9.18.ebuild:
  add parallel-make patch from hasufell
