@@ -1,10 +1,26 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX hedgewars-0.9.18-cflags.patch 757 SHA256 d43ad32b6113211bcbee3820cd2daef39d561d08af181be650fe2d53e1652299 SHA512 c347a855b1166ec21de597bf65c498cf987c06028b5fd91e819ab3e0fc09aa3a3741c9e000000ca4392f18d3ce8bf906ac74888340f1c29aeeeb6a0e74ce8692 WHIRLPOOL dab57f74637b954c5ebd43370ffabc822fc0ef0c1ee0c822b7c9cfb5309f78169a7d02c12d97e6aada038a59e3bc273ae3c85c65a43b608e8fe9af1d9d5367d6
 AUX hedgewars-0.9.18-cmake.patch 863 SHA256 c4e241f6ee2b9cd5123bc6b583c535b22477854b58327bd84a9d4a9e6550d887 SHA512 3fd06e2f6fbf2b1f549797024429d305b5ea8015862826bb2a21da5c46fb999bd766b83f8ee6531815e722441bb904c40f35c7408fa0ff81273cd79a823b98d0 WHIRLPOOL 87b48e1316b37d6f1c2f73e2567681d0ffdd5768e7e746af6f7aa57e808003e9bb07ec519f2a77357b3dda6cc57158d5621459b9ad8bb8ff80bde8a0ade73593
 AUX hedgewars-0.9.19-de_translation_fix.patch 735 SHA256 2254e5d8911cb781a0df1acc2444a4d006e9818f29d246a9df3468d8e3459d26 SHA512 5d337379eb23371b71c9f7578de75efe88743669b32d5084a0d741ad727d537ec519529e09a6325a9fc94c5a18c2f6809e2feb4ca1ae1a5bf353603d17c97f55 WHIRLPOOL d933d939e951d37d03e7953b58e5e188029794d5c97af77e6c96960ed2bbdbda630d808e6f02b7534985c568a52f3b664f7603d6d24757cc99a9fbf7f692de77
 AUX hedgewars-0.9.19-missionmap.patch 2427 SHA256 4e4dc7e5885bcf8d966d4a4bc3f378859cd43aab8b73e31a5fb4232ef80dc277 SHA512 3813ba22c13cbb7bb282cdae7eac814aa149f6f8159b69863ec74eac4d815ab4cf4321722c858577ad85c1f8e554bc1692f7d3ac47ab356999320439f0d026e4 WHIRLPOOL 86fc337b09c5200032d9ffa58f3efc738b4597880de82ce5dbb0f4dcaf88aa76d4b1d1063e9289fe0a8a4ae6b6215ad53862be0110cc393cee51fdae44f17cf7
 DIST hedgewars-src-0.9.18-3.tar.bz2 180719233 SHA256 75cb5de74c480eb295d06a4a2db37fcc57560a464870f15989cf6bdf0e937daa SHA512 cdbcb160d062412386029d12b35c1167f20701c867386ddfaa8b470d1c0c97e8bed6d467f161b7ae5e7b520ea7c63178e30bef2cefc64895daa404f560543ccc WHIRLPOOL 96b6354970e0ae5d724bd13639de89256361819888571067e0c21f498ae778e582d43abdd80cf53a0c21788a566e067926aacbf70740de44b5af7192260ee035
+DIST hedgewars-src-0.9.19.3.tar.bz2 191688324 SHA256 93adb39268e92b730d1014897bfcf55e0ee46e31b174f769b11408690a33ae90 SHA512 6aeb63e999ecba30af08db9c895b24527c3372558c50e5c58640fcdd0c7d4d800ae35de42f18945b870a4dc20b1f259e6748cc968fd0fdf6575ad6acc5c0aefe WHIRLPOOL dc4bd983ba6066368a8d0d3c14be5bb1aab10169f1fc7d607a4009714d085b8f0ed85670de76f64051a7f2b4cbecadde5cf1aad96254064f80ee48a636f9a582
 DIST hedgewars-src-0.9.19.tar.bz2 191557733 SHA256 bfb2f342aa71b71efdacd4154162575a0b39f17507233af2a043324a04314d4f SHA512 96f060e5b04729207b8f1deaec0b37f5d02829aab525fa645c44cd277a9785534a78bbd87b3de5eb6c35f6575bab8d1cbbd920e653aa362fe5805024998f0753 WHIRLPOOL b6e92ae644db517e666b7d86e132312ae3e8521f54317e9b720e7cf0a5f56c0e617ef8e4ed075263619f0980ba757a2ab1308ff8492ec7d0381db0215813b2bb
 EBUILD hedgewars-0.9.18-r1.ebuild 1768 SHA256 050c089b2eb146f6b750664b8329bb8ed9ec0d035392b1a06c7fae719a8cdfc6 SHA512 5b9708c45abf63d0454650fe01a9a47813aae772a609ed354821c54e6b6d32460ade8bb61b5793abd45726905db157a794a24db602c0de7f5c05003c76729282 WHIRLPOOL 08e8be19852fd08e00837dc1a7c83f85b248c5a0ce90df9680d36757518800b5c6455e879e66cfe81735ee6b972ed00a7fdce0a78963012f576df440847c309d
 EBUILD hedgewars-0.9.19-r1.ebuild 1824 SHA256 750eac55157c825015de2f20d4d1ca672db42ae40932f2ea8dd52ee016f4c879 SHA512 47682fbb6357eb8efbf2b150778c3d47b20a10c9eb793b6bfa82fc9225588fc1219b11aa97239406357cef7ec9b0dd4a6acb563eb9b2a1bf521525df23ef9211 WHIRLPOOL ac6cee7011f0627db18aace05f606f6afa3b885a6d9882bd7b1a2efa783a9f592e77bd573c0fb0a253e491fa0f4dd7bcca1cc340c78b983e41c83406789fc6b5
-MISC ChangeLog 7556 SHA256 0e082df28405539ccacfb76fd7b1a25345f38e3d1f762309e24d2db594f5b928 SHA512 304bdc881e5e15ee2c20c8da60220984f513aed35e3ebfd7d4ca08dc5afb666ecc0d2f14361e2d8fa77537ab2f616485998ba60e32682ec00c24f84f4f55d38c WHIRLPOOL 4869a997425ae1a5e4ea2c0cef72a5c13fb27e988346d7ea5c48a8b075a43b85b87f9ebac18372e04209f4c49be94597aa7db2167fbb05138f44cf56b53aca8d
+EBUILD hedgewars-0.9.19.3.ebuild 1755 SHA256 a8c05d1743e15fe6b363e57d9dae023e9468b32b6ba1ff9c43bf4d8d2ded1d23 SHA512 b00b7ad90856112abb28814ca8d97cd48bee46f5a8f42ab45eb44015ff0ef7714876d3ff8c72816530b93e9d11eb5a031a8949c2e3462481dcd1fa5a159058d8 WHIRLPOOL 9afe660a71f3dab0777076e2d19cf72b8e442c8749d985718759a0587105b5d98df09e9a57eeda12039ed187701124ee06a2313832df3de97fdf10adb7555fc4
+MISC ChangeLog 7685 SHA256 3ab45b23f572786d618d219780a78eae39d40eabedee074e2fff2e12b9da78d7 SHA512 2c38178ce8f1f63853f6e4450e57cfd7d837d8b955248c7d23f3241f8840125f9b8c08c06bc14a49806ba6ee968bdb69e625a0981fd4838e8f596eef2689bf5b WHIRLPOOL e08177772e72aebace4ea77e1d54519b12e591c73e6943e64b6a3adb3965fedf0dd3c6e79ef68da598999ba8410eed4abccf9117f8e22883c0188bdb7d08fbc3
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iQEcBAEBCAAGBQJSMGY4AAoJEFpvPKfnPDWzM3MH/ixKUWVdAFv/wmN7ohPp0hj2
+/Xn+HHE6Ru2ciRvBazzKj+6mmVXpGSPp5gO5ozgPcH5Al6873EpiP0QdC+LVfrW6
+qyqaIMWT4rR69P3N9jtpWdOTmmm7GOmMvTUWgaM7pGCS5JoY+/8dMeyIORnPh8kS
+83M/GwzetV/XXo5fkko9Of4wdSXFNk/k0GFTLSLNuLq5aKd4/NL3/RPGB+6iQR0b
+ysHSeGj1B+Z5wbtpmmTqKFUDH01qI7Er7Q7GlokXf/nJ9WsPsKpv+W5iAYiNBHMS
+1HBm6vh13C84RMqHmy7hJnY3Dovwk3az4gnNNA+YhWx5RM8j0zX7H4UPWx4ymuI=
+=w1lb
+-----END PGP SIGNATURE-----
