@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install postinst preinst prepare setup test unpack
+DEPEND=dev-lang/lua dev-qt/qtgui:4 media-libs/freeglut media-libs/libsdl[audio,opengl,video] media-libs/sdl-image[png] media-libs/sdl-mixer[vorbis] media-libs/sdl-net media-libs/sdl-ttf sys-libs/zlib virtual/ffmpeg >=dev-lang/fpc-2.4 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=A turn-based strategy, artillery, action and comedy game
+EAPI=5
+HOMEPAGE=http://hedgewars.org/
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2 Apache-2.0 FDL-1.3
+RDEPEND=dev-lang/lua dev-qt/qtgui:4 media-libs/freeglut media-libs/libsdl[audio,opengl,video] media-libs/sdl-image[png] media-libs/sdl-mixer[vorbis] media-libs/sdl-net media-libs/sdl-ttf sys-libs/zlib virtual/ffmpeg >=media-fonts/dejavu-2.28
+SLOT=0
+SRC_URI=http://download.gna.org/hedgewars/hedgewars-src-0.9.19.3.tar.bz2
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	63afaaed8aa819fdcb814c7cd39495a2	flag-o-matic	2ff578fb151da221e1797f12e2990e72	games	0fb7637597e0869f6c8be79b11d0135a	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=4c98ca459a62131debf6b95f99c19247
