@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare unpack
-DEPEND=net-libs/libssh net-print/cups dev-qt/qtcore:4[ssl] dev-qt/qtgui:4 dev-qt/qtsvg:4 ldap? ( net-nds/openldap )
-DESCRIPTION=The X2Go Qt client
-EAPI=4
-HOMEPAGE=http://www.x2go.org
-IUSE=ldap
-KEYWORDS=amd64 x86
-LICENSE=GPL-2
-RDEPEND=net-libs/libssh net-print/cups dev-qt/qtcore:4[ssl] dev-qt/qtgui:4 dev-qt/qtsvg:4 ldap? ( net-nds/openldap ) net-misc/nx
-SLOT=0
-SRC_URI=http://code.x2go.org/releases/source/x2goclient/x2goclient-3.99.2.2.tar.gz
-_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	qt4-r2	ce0c9abfee272185e03ab73f09f5fd69	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=2ff4daed0da08a2d410bf9aeb5533922
