@@ -1,30 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST x2goclient-3.99.2.2.tar.gz 1120830 SHA256 ef3653cb7643ea17a2e5a3beb2d3072e4c6ddff6fcee2021e5d7251a07f6ca6a SHA512 f1d06073667a7ee1d29fb63ed08fc57854014f2c99fb3e56cba34f1d424ff9fc55abc6d5d1cd52cf87843e362bbea51cbdee999c3705603c33bbefb17a5048f9 WHIRLPOOL de55e36e57d444f366ad398f4dd7930c2fd13090b65f086dfc22022e817558df920386d7a230ffeb399316474a65b9fba3ade4a6e72e959209c594829563053d
-DIST x2goclient-4.0.0.1.tar.gz 1239157 SHA256 569cc69f03edcece997a56ccb57b9e70c65b8697000328bde2d75cdb928f4ac9 SHA512 efe0597669946d06735004afc94087133d42c59e1f32b5dd4c5c7b78437736af882301cdf241686a547619bce64ee0456d052a60796579cd28d48b04c945d18d WHIRLPOOL fedc88e4c18b3a3b7800f98c0f95fdd3659dd8cb9c5c25991d20b9f789687fc88d12bb30b6d6f6534ab2877225e0736e78bfd4e88b638f36c4d6b8a27170d307
-DIST x2goclient-4.0.0.4.tar.gz 1324669 SHA256 b908b9775b888c0f61b64b4d63bd8042ee0728e69bda1ad4fbfd738ba4f6a325 SHA512 008edebb6f5058fec29437b875db31a158565e52eb1e8c5cf22512d86ace952f7e8c115ca287bb8eaee1542fc36ee5c670904f2792b0d0a16d9ffd8aa514c3eb WHIRLPOOL b18cc6080c180efed539168096eb693dda24ed2b06355c54b6abed91f7227afb35a204bee9525dfe6a480af93a6923d3f571dcd899ec38d5198b005953442e24
 DIST x2goclient-4.0.1.0.tar.gz 1323833 SHA256 3c72760f901ef6801529b9b5d8c3333002a53c65bdaeb9832f80d65f44665ed6 SHA512 6127df3826f79b72562d8184b1d3742f4cf5704f13db3b0eb8cbef32e99863dc7894785e289742fa39cad26965f8615b601bd86d8b9ca94de352c9db24acd141 WHIRLPOOL 9b5781bc38c4983fd0e1704f62239b4f43439a9b3d411b683ee07e32ea84ee0908ab5a262ef39529515222b4b379840c0f55a6ec4b31b71ddb7454039fcfce94
-EBUILD x2goclient-3.99.2.2.ebuild 904 SHA256 97159ae56c32406b904337760cb9be074ef238c2ed2165fc6d3e62fda4b21024 SHA512 d2946166ab3b174f8da641478342e0522b8b915259f70f144204179dc6f166e6f6a55499714ddcd14df0c68da0aa0b594813a14a4a10fcd5d66509e3651a7126 WHIRLPOOL 29e25eec47bb524b22bf246c60cb444ba39274135c2df99eb13544a4e0af9531f458eb0f0e1f53cc6a6d48ad7441eb14678fff62e1bd412d4fceb061c8accc93
-EBUILD x2goclient-4.0.0.1.ebuild 905 SHA256 fde9fd13dca950ea3bf15ef55a89dc58370f144bdcc3945682ad60fa1831762f SHA512 f5e5dfbd808b7b6336f8b8261d6759bf2eb34eb3536bcb1223f466247da06160df41d6dcff71e4b09e3fd346a9bf87f23b2600fad92458893b196e7bd3601934 WHIRLPOOL 231ea9c3a0399a481a8dfa82e77c03cd58aae73576b46ecbc4522e2f84d03aebc538a3cc06018b6e374fac75e84dad81d6434f021ce6b987bd919f1fa7ce0e5f
-EBUILD x2goclient-4.0.0.4.ebuild 905 SHA256 f0d94f259f5485c495cb988a1ddff4777f62dbf99cd865f19360d8e48282d72e SHA512 375c4e0e942fbdd9a8a3e79c60bfe9d41a4c01ff36c4bf0be6df8f51a67e89ee6e0544c85978cba647b91e20371e9efebafa4c3bad9e02d51e643ef403197569 WHIRLPOOL a0d0bea5b4be72c333dd25da27545d140c3927272836a8d950689aaaebbdbc941d5e14a50db15a53c296eaf892c1102a03f2fd57a00820350e21a26cb7c0006d
+DIST x2goclient-4.0.1.1.tar.gz 1345719 SHA256 dd3877f8830d6085241c60becbd79608a8b2155f941bac258cc5e2079f818be9 SHA512 dc7f8e173c6d8043a1528e9fe20480191d2e9d98321c9b22fdf5b0b0a181eb67d360bc076235a4a5ffe53e11d005b9c0e764f43c972f801e04368f3a4fd4f3dd WHIRLPOOL 5918e08b9078fc3e8defe0fca128ccbf5f5974991bf7bcf90be5ff296ce864f303bcc891465c3fb398f7752f7085fc4ce1711c62bc3827819697be10a8c03983
 EBUILD x2goclient-4.0.1.0.ebuild 898 SHA256 1d12f1c3d5bd87634b3d3d5e586a98450f1d5186e0234319337fb8d93b42f453 SHA512 0ad8b31bbf834d9f824d993690e60b06a42fec9b2d6f24ce05180e37b00eb552c60c587eeb18fceaacced6e1f671b0d857e2f9b960665685f31412b47a2eeab8 WHIRLPOOL 7a2f45df29bd7689e3629463b2d7fdbcd201cdf92e4192ce23398fe04fbfcc18cb7d2725b04b0968bdfc4fad8780979e0a35844e10ab20dea3b0beeef7d50e1a
-MISC ChangeLog 3736 SHA256 4ed0150ee10c5bc8611ec1dbac7880e68d5adfa44677822ddeb97e252b40a56b SHA512 86f37364b86dc6f9101175c1f9398c7323042d9f571f9e9ce3395d69330a5ae9ab26168ae260b84499b50d474d3aa9bc5946ae6f894991763b1791b66a468f0f WHIRLPOOL a04d86d37c7c9fbc7fd32db237014ff70ad9d75645cd79b1723442d20f979df2648d4a674e8baa9fb2dda04a606b7f228437638b5b739aee8ef705dfb8b62cbe
+EBUILD x2goclient-4.0.1.1.ebuild 905 SHA256 dad170fa13bfdf2b232d4d01f40a8c46672ad76dc7cdcd06fa23b642301ef977 SHA512 3f1e2c17c318d910697e6fe76437327007e4a0c89591eb1b4c50b1119d73193784e2285416c80066f5fd7cbd516600569122ec0c4889fd19970683c8fa029619 WHIRLPOOL ffbbdb4fe55171625f80a4f1d55a66bb6fe53a4621556348a7170f77fe0b88047c920ac62577d07d264cce51c6955eeebda23c734f4f160568f646c03619ac86
+MISC ChangeLog 3985 SHA256 fbfdfbb7b1f1976675e347b5aa57700572b0399261ae92da20d5f7c410117226 SHA512 5f2914302f0b642b5f14b84fe700cbb7a721283160bb0f2a3d00f93a120afe6fc9266292a18fb88313df72011bbec1ae0ee0d0b5aa959a971ab40fa8291a0615 WHIRLPOOL ccc4beacfd0b5569e4f0bf97c9c08011c4ecb26b6eb9e0c807300259f0fc89c377a7d9108a0ff0a5ef79edc0b99837a5acc57a0b6ca1c350d8dabe9f6c2601bd
 MISC metadata.xml 211 SHA256 a6b5a5387c7e7f441d794c61edf1718caa3c58ffbf9b595ec536ff9617a7471f SHA512 a07791c0d23ed28f99fa6d1b38e25477b2a4a3eecc8dbcf3a098ed4a9d8ede755a8711f35046e8ae77107814c2c702ce26ea4b35a014b243301e2cae8fd747a0 WHIRLPOOL 83c2fcc96384e3bd5a97283fe0392d4bd9af41d175bedda09686349c2e26b64796157b81b42b74faed1adc1035d1fe3442986f2a89a84a8b29241283381c0d1b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRtvn1AAoJELp701BxlEWfIzIP/i9m84VJ5nWN+ZB8nLy/Zdbo
-UleVBWeWU6xfFxug2JCZ2fiBFXYoqTspP59zYklxY8LZsA1I5RrhJ5qa+GFECsZ6
-0M5ZB6ls5rBcgKK8H/AyL5aIjGxuS5PUx+qf6xiK0hnij8bfQtzk55dh55GA5ciV
-bIEiuEFMR2DjW1Gvy77E2fedpZ+zQGzwl/J8q4XP50ayATiC4Hh3dcvdN46RW3GT
-2PRZFHir5hQJ9s6B0mEB9ICwCXbHGXBVYYNqn3CgwDqlxEkNqsbNe45dr/zp5ekc
-LsA72uJbL92iKK5atr3B2xjV+MVmCektwkM6oGtEVN4yHX+VvMhnVFWsnwKvMiFV
-HuaKnvAu6o8BpaeM53SedKr8o1AS0MYEcjDPmGOD71j7cc3yI6h61wqOtlSaBcd2
-kGG52npU5Gr2HtLtISQX7Vw+tb+ZJ2v4usRN3NAWM4SLwAlWvGkBLb2ENosjHk1u
-AMZX/g+bkXO1VLXw2rxc6ev+jIBA4DXOV/9OXWdCiPtCaHI4yC1CKwmU86s+25GC
-15K3QJJXeZ5jMU2N7fBK4GfpeG2SO6U6416qbe2b/Gzu8DRbljX6lii8G0GKRRSq
-ekB9XGCzdN4LwOhJpINbg1af/4pC8LL0rJ3ctXDTLEa0x31mgfRXygGGB+46Jwdv
-e5x1nbZk9RawjBELHGLf
-=XVKw
+iF4EAREIAAYFAlIwZxIACgkQFYEBGcdFJfKU0gD+OLAK4eguyBy6QrYMLAtrwA5c
+iZCW1MAWmbCp80CAtMAA+QHxcEtwlP4ZDrGefotH+Lj7ZXfDDJba8ItYViW7mwzv
+=rn3W
 -----END PGP SIGNATURE-----
