@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/x2goclient
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/ChangeLog,v 1.21 2013/06/11 10:20:39 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/x2goclient/ChangeLog,v 1.22 2013/09/11 12:50:22 voyageur Exp $
+
+*x2goclient-4.0.1.1 (11 Sep 2013)
+
+  11 Sep 2013; Bernard Cafarelli <voyageur@gentoo.org>
+  -x2goclient-3.99.2.2.ebuild, -x2goclient-4.0.0.1.ebuild,
+  -x2goclient-4.0.0.4.ebuild, +x2goclient-4.0.1.1.ebuild:
+  Version bump, remove old versions
 
   11 Jun 2013; Agostino Sarubbo <ago@gentoo.org> x2goclient-4.0.1.0.ebuild:
   Stable for x86, wrt bug #472582
