@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/hedgewars
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/hedgewars/ChangeLog,v 1.53 2013/06/03 16:37:38 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/hedgewars/ChangeLog,v 1.54 2013/09/11 12:46:44 hasufell Exp $
+
+*hedgewars-0.9.19.3 (11 Sep 2013)
+
+  11 Sep 2013; Julian Ospald <hasufell@gentoo.org> +hedgewars-0.9.19.3.ebuild:
+  version bump
 
   03 Jun 2013; Michael Sterrett <mr_bones_@gentoo.org>
   hedgewars-0.9.19-r1.ebuild:
